--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,23 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "cviebrock/eloquent-sluggable": "^4.5",
+        "davejamesmiller/laravel-breadcrumbs": "^5.2",
         "doctrine/annotations": "^1.6",
+        "elimuswift/db-exporter": "*",
         "fideloper/proxy": "^4.0",
+        "flynsarmy/db-blade-compiler": "2.*",
+        "goodnesskay/laravelpdfviewer": "^1.0",
+        "google/apiclient": "^2.2",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.2.0",
+        "nesbot/carbon": "^1.29",
+        "pusher/pusher-php-server": "^3.0",
+        "revolution/laravel-google-sheets": "^3.2",
+        "twbs/bootstrap": "4.1.1",
+        "unisharp/laravel-ckeditor": "^4.7",
+        "watson/bootstrap-form": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
